Cargo: fix typo
Signed-off-by: Gyuho Lee <gyuho.lee@avalabs.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1" # https://crates.io/crates/cmp-manager
 edition = "2021"
 rust-version = "1.62"
 publish = true
-description = "Rust random manager"
+description = "Rust comparison manager"
 repository = "https://github.com/gyuho/cmp-manager"
 readme = "README.md"
 license = "Apache-2.0"
